# converter

./: .dockerignore  .env.example  .env.production.sample  .gitignore  ADAPTER_TESTING_GUIDE.md  API_DOCUMENTATION.md  CELERY_SETUP.md  CHANGELOG.md  CODEBASE_AUDIT_AND_FEATURE_MAP.md  COMPREHENSIVE_CONVERTER_README.md  CONTRIBUTING.md  CONVERSION_TASK_README.md  CORS_CSRF_CONFIGURATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  Dockerfile.audio  ENHANCED_AUDIO_SETUP.md  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_SETUP.md  HARDENED_VIDEO_CONVERSION.md  PYTHONANYWHERE_DEPLOY.md  Procfile  README.md  RENDER_DEPLOYMENT_SUCCESS.md  RENDER_DOWNLOAD_FIX.md  RENDER_ENV_VARS.md  RENDER_PORTS_GUIDE.md  START_GUIDE.md  STEP2_CLEANUP_COMPLETION_REPORT.md  STEP3_COMPLETION_SUMMARY.md  STEP3_VENV_REINSTALLATION_SUMMARY.md  STEP4_COMPLETION_SUMMARY.md  STEP6_COMPLETION_SUMMARY.md  STEP6_LINTING_FIXES.md  STEP7_SUMMARY.md  STEP8_TESTING_COMPLETION_REPORT.md  STEP_10_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  (+63 more)
.github/workflows/: ci.yml
assets/: resilientUploader.js  styles.css  upload.js
converter/: ADAPTERS_README.md  adapters_views.py  admin.py  api_urls.py  api_views.py  api_views_extended.py  download_handlers.py  healthcheck.py  models.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py  views_comprehensive.py
converter/adapters/: __init__.py  archive_engine.py  audio_engine.py  base.py  document_engine.py  engine_manager.py  image_engine.py  video_engine.py
converter/management/commands/: cleanup_old_files.py
converter/migrations/: 0001_initial.py  0002_conversionhistory.py
converter/templates/converter/: audio_to_text.html  base.html  batch_converter.html  comprehensive_converter.html  conversion_history.html  conversion_interface.html  home.html  index.html  photos_to_gif.html  results.html  success.html
converter_site/: __init__.py  asgi.py  celery.py  celery_app.py  celery_app_backup.py  production_audio_settings.py  railway_settings.py  settings.py  tasks.py  urls.py  wsgi.py
deployment/: nginx.conf
docs/: NEW_FEATURES.md
scripts/: cleanup_cron.sh  crontab_setup.txt  start.sh  verify_docker_setup.sh
src/upload/: resilientUploader.ts
static/css/: main.css  purple-theme.css
static/images/: README.md  backgrounds.css
static/js/: icon-library.js
templates/: base.html
tests/: AUTOMATED_TESTS_README.md  README.md  create_test_media.py  requirements_test.txt  requirements_tests.txt  run_all_tests.py  run_automated_tests.py  test_audio_generator.py  test_celery_api.py  test_form_validation.py  test_integration_mp4_to_gif.py  test_stt_functionality.py  test_ui_functionality.py
